# simple-calc

simple-calc/: .gitignore  CMakeLists.txt  Makefile  doxy  main.cpp  mainwindow.ui
simple-calc/controller/: controlnode.cpp  controlnode.h  evalstringprocessor.cpp  evalstringprocessor.h  mainwindow.cpp  mainwindow.h
simple-calc/documentation/html/: annotated.html  classControlNode-members.html  classControlNode.html  classCreditCalc-members.html  classCreditCalc.html  classEvalStringProcessor-members.html  classEvalStringProcessor.html  classEvaluator-members.html  classEvaluator.html  classMainWindow-members.html  classMainWindow.html  classQCPAbstractItem-members.html  classQCPAbstractItem.html  classQCPAbstractLegendItem-members.html  classQCPAbstractLegendItem.html  classQCPAbstractPaintBuffer-members.html  classQCPAbstractPaintBuffer.html  classQCPAbstractPlottable-members.html  classQCPAbstractPlottable.html  classQCPAbstractPlottable1D-members.html  classQCPAbstractPlottable1D.html  classQCPAxis-members.html  classQCPAxis.html  classQCPAxisPainterPrivate-members.html  classQCPAxisPainterPrivate.html  classQCPAxisRect-members.html  classQCPAxisRect.html  classQCPAxisTicker-members.html  classQCPAxisTicker.html  classQCPAxisTickerDateTime-members.html  classQCPAxisTickerDateTime.html  classQCPAxisTickerFixed-members.html  classQCPAxisTickerFixed.html  classQCPAxisTickerLog-members.html  classQCPAxisTickerLog.html  classQCPAxisTickerPi-members.html  classQCPAxisTickerPi.html  classQCPAxisTickerText-members.html  classQCPAxisTickerText.html  classQCPAxisTickerTime-members.html  (+210 more)
simple-calc/documentation/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_6.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  (+3 more)
simple-calc/documentation/latex/: annotated.tex  classControlNode.tex  classCreditCalc.tex  classEvalStringProcessor.tex  classEvaluator.tex  classMainWindow.tex  classQCPAbstractItem.tex  classQCPAbstractLegendItem.tex  classQCPAbstractPaintBuffer.tex  classQCPAbstractPlottable.tex  classQCPAbstractPlottable1D.tex  classQCPAxis.tex  classQCPAxisPainterPrivate.tex  classQCPAxisRect.tex  classQCPAxisTicker.tex  classQCPAxisTickerDateTime.tex  classQCPAxisTickerFixed.tex  classQCPAxisTickerLog.tex  classQCPAxisTickerPi.tex  classQCPAxisTickerText.tex  classQCPAxisTickerTime.tex  classQCPBars.tex  classQCPBarsData.tex  classQCPBarsGroup.tex  classQCPColorGradient.tex  classQCPColorMap.tex  classQCPColorMapData.tex  classQCPColorScale.tex  classQCPColorScaleAxisRectPrivate.tex  classQCPCurve.tex  classQCPCurveData.tex  classQCPDataContainer.tex  classQCPDataRange.tex  classQCPDataSelection.tex  classQCPErrorBars.tex  classQCPErrorBarsData.tex  classQCPFinancial.tex  classQCPFinancialData.tex  classQCPGraph.tex  classQCPGraphData.tex  (+61 more)
simple-calc/service/: creditcalc.cpp  creditcalc.h  polishnotation.cpp  polishnotation.h  utils.cpp  utils.hpp
simple-calc/test/: cases.cpp  test.cpp  test.hpp
simple-calc/view/: mainwindow.cpp  mainwindow.h
